--- a/patientor-backend/package.json
+++ b/patientor-backend/package.json
@@ -6,13 +6,14 @@
     "tsc": "tsc",
     "start": "node build/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "lint" : "eslint ."
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "eslint": "^8.57.0",
@@ -21,6 +22,7 @@
     "typescript-eslint": "^7.13.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
