--- a/patientor-backend/package.json
+++ b/patientor-backend/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2",
